--- a/app/views/products/all_products.html.erb
+++ b/app/views/products/all_products.html.erb
@@ -1,4 +1,5 @@
 <h1>All Products</h1>
 <% @products.each do |product| %>
-  <h2><%= product.name%></h2>  <h2><%= product.price%></h2>
+  <h2><%= product.name%></h2>
+  <h3><%=product.price%></h3>
 <% end %>
