implemented seeds.rb method

--- a/app/views/products/all_products.html.erb
+++ b/app/views/products/all_products.html.erb
@@ -2,4 +2,5 @@
 <% @products.each do |product| %>
   <h2><%= product.name%></h2>
   <h3><%=product.price%></h3>
+  <h3><%=product.description%></h3>
 <% end %>
