--- a/app/views/products/create.html.erb
+++ b/app/views/products/create.html.erb
@@ -1,2 +1,3 @@
 <h1>Created New Product</h1>
-<a href="/products">Back</a>
+<a href="/products">Back to Products</a>
+<div><a href="/products/<%=product.id%>"">Back to Products</a></div>
