--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
     <div class="col-md-4">
       <div class="well">
         <h2><a href="/products/<%=product.id%>"><%= product.name%></a></h2>
-        <h3><%=product.price%></h3>
+        <h3><%=number_to_currency(product.price)%></h3>
         <img class="product_image" src="<%= product.image %>">
         <p><%=product.description%></p>
         <h6>Added <%= product.friendly_created_at %></h6>
