--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,14 @@
         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
         <li><a href="#">Link</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort-able<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="products?sort_by=name">Sort by Name</a></li>
-            <li><a href="products?sort_by=price">Sort by Price</a></li>
+            <li><a href="products?sort_by=price">Sort by Price (Low to High)</a></li>
+            <li><a href="products?sort_by=price&order=desc">Sort by Price (High to Low)</a></li>
             <li><a href="products?sort_by=description">Sort by Description</a></li>
+            <li><a href="products?discounted=true">Show Discounted Products</a></li>
+
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
