--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -7,10 +7,10 @@
     Price: <input type='text' class="form-control" value="<%= @product.price %>" name="form_price">
   </div>
   <div class="form-group">
-    Image: <input type='text' class="form-control" value="<%= @product.image %>" name="form_image">
+    Description: <input type='text' class="form-control" value="<%= @product.description %>" name="form_description">
   </div>
   <div class="form-group">
-    Description: <input type='text' class="form-control" value="<%= @product.description %>" name="form_description">
+    Supplier Name: <input type='text' class="form-control" value="<%= @product.supplier_id%>" name="form_supplier">
   </div>
   <input type ="submit" value="Update Product Info">
 <% end %>
