--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -7,10 +7,11 @@
     Price: <input class="form-control" type='text' name="form_price">
   </div>
   <div class="form-group">
-    Image: <input class="form-control" type='text' name="image_name">
+    Description: <input class="form-control" type='text' name="form_description">
   </div>
   <div class="form-group">
-    Description: <input class="form-control" type='text' name="description">
+    Supplier ID: <input class="form-control" type='text' name="form_supplier">
   </div>
+
   <input type ="submit" value="Create Product">
 <% end %>
