--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,12 +12,20 @@
 <h2><%= number_to_currency(@product.price) %></h2> -->
 <h3>Tax: <%= number_to_currency(@product.tax) %></h3>
 <h3>Total: <%= number_to_currency(@product.total) %></h3>
-<div class="parent"><img class=product_image src="<%= @product.image %>"></div>
+<div class="parent">
+  <%@product.images.each do |image|%>
+    <img class=product_image src="<%= image.url %>">
+    <h1><% image.product_id%></h1>
+  <% end %>
+</div>
 <h2><%= @product.description %></h2>
+<h2><%= @product.supplier.name %></h2>
  <h4><a href="/products/<%=@product.id%>/edit">Edit Product</a></h4>
  <%= form_tag "/products/#{@product.id}", method: :delete do %>
   <!-- <input type="submit" value="Destroy Product"> -->
  <% end %>
 <%= link_to "Destroy Product", "/products/#{@product.id}", method: :delete %>
+<div><a href="/products/:id/images/new">Add New Image</a></div>
+<div><a href="/images">All Images</a></div>
 
 <div><a href="/products">Back to Products</a></div>
