--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -4,7 +4,7 @@
     Url: <input class="form-control" type='text' name="url">
   </div>
   <div class="form-group">
-    Product ID: <input class="form-control" type='text' name="product_id" value="">
+    Product ID: <input class="form-control" type='text' name="product_id" value="<%#{@products.id}%>">
   </div>
   <input type ="submit" value="Create Image">
 <% end %>
