--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,10 +1,10 @@
-<h1>New Image</h1>
+<h1>New Image for <%= @product.name %></h1>
 <%= form_tag "/images", method: :post do %> <!-- :method => :post -->
   <div class="form-group">
     Url: <input class="form-control" type='text' name="url">
   </div>
   <div class="form-group">
-    Product ID: <input class="form-control" type='text' name="product_id" value="<%#{@products.id}%>">
+    Product ID: <input class="form-control" type='text' name="product_id" value="#{@product.id}">
   </div>
   <input type ="submit" value="Create Image">
 <% end %>
