--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,10 +53,12 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-
+        <% if current_user %>
+          <li><a href="/logout">Logout</a></li>
+        <% else %>
           <li><a href="/signup">Signup</a></li>
           <li><a href="/login">Log In</a></li>
-          <li><a href="logout">Logout</a></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
