--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -4,8 +4,8 @@
     Url: <input class="form-control" type='text' name="url">
   </div>
   <div class="form-group">
-    Product ID: <input class="form-control" type='text' name="product_id" value="#{@product.id}">
+    <input class="form-control" type='hidden' name="product_id" value="<%=@product.id%>">
   </div>
-  <input type ="submit" value="Create Image">
+  <input type ="submit" value="Add Another Image">
 <% end %>
-<div><a href="/products">Back to Products</a></div>
+<div><a href="/products/<%=@product.id%>">Done Adding Images</a></div>
