--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -8,10 +8,11 @@
   </div>
   <div class="form-group">
     Description: <input class="form-control" type='text' name="form_description">
-  </div>
-  <div class="form-group">
-    Supplier ID: <input class="form-control" type='text' name="form_supplier">
-  </div>
-
+  </div>Supplier ID: 
+  <select class="form-control" name="form_supplier">
+    <option disabled selected>Select an Option</option>
+    <option value=1>1 Nintendo</option>
+    <option value=2>2 Sony</option>
+  </select>
   <input type ="submit" value="Create Product">
 <% end %>
