--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="/products">GMZ</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -38,7 +38,11 @@
             <li><a href="products?sort_by=price&order=desc">Sort by Price (High to Low)</a></li>
             <li><a href="products?sort_by=description">Sort by Description</a></li>
             <li><a href="products?discounted=true">Show Discounted Products</a></li>
-
+            <% Category.all.each do |category| %>
+              <li><a href="/products?category=<%= category.name %>"><%= category.name%></a></li>
+            <%end%>
+            <!-- <li><a href="products?category=co-op">Co-op Games</a></li>
+            <li><a href="products?category=single-player">Single-Player Games</a></li> -->
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
