--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,9 @@
 <h1>Show Order</h1>
 <h2>Order ID: <%=@order.id%></h2>
-<h2>Quantity: <%=@order.quanity%></h2>
 <h2>Subtotal: <%=@order.subtotal%></h2>
 <h2>Tax: <%=@order.tax%></h2>
 <h2>Total: <%=@order.total%></h2>
 <h2>Email: <%=@order.user.email%></h2>
-<h2>Product: <%=@order.product.name%></h2>
-<img src="<%=@order.product.images.first.url%>">
-<h2><%=@order.product.created_at%></h2>
+<h2><%@order.carted_products.each do |thing|%></h2>
+  <h2><%=thing.product.name%>-<%=thing.quantity%> x <%=thing.product.price%>  =    <%=thing.product.price*thing.quantity%>          + Tax: <%=thing.product.tax%>      =  <%=(thing.product.price*1.09.round(2))*thing.quantity%></h2>
+<% end %>
